syntax = "proto3";
option go_package = "<SERVICE_NAME>/pbuf"; // go-package value will be replaced by proto generator

package pbuf;

service Greeter {
    // say hello to one input
    rpc SayHello(HelloRequest) returns (HelloResponse) {}

    // say hello to multiple input
    rpc SayHelloMultiple(HelloRequestMultiple) returns (HelloResponse) {}

    // say hello to one input
    // but always returns error
    rpc SayHelloError(HelloRequest) returns (HelloResponse) {}
}

message ResponseHeader {
    // HTTP status of the response
    int32 status = 1;

    // message of the response
    string message = 2;
}

message HelloRequest {
    // name you want to greet
    string name = 1;
}

message HelloRequestMultiple {
    // multiple names you want to greet
    repeated string name = 1;
}

message HelloResponse {
    // response header
    ResponseHeader header = 1;

    // message you get
    string message = 2;
}
